<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/resultTv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="end"
        android:textSize="@dimen/textSizeTv" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear"
                style="@style/ButtonStyle"
                android:text="@string/c" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/div"
                style="@style/ButtonStyle"
                android:text="@string/div" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                style="@style/ButtonStyle"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                style="@style/ButtonStyle"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button9"
                style="@style/ButtonStyle"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mult"
                style="@style/ButtonStyle"
                android:text="@string/mult" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                style="@style/ButtonStyle"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                style="@style/ButtonStyle"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button6"
                style="@style/ButtonStyle"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                style="@style/ButtonStyle"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                style="@style/ButtonStyle"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                style="@style/ButtonStyle"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                style="@style/ButtonStyle"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                style="@style/ButtonStyle"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/options"
                style="@style/ButtonStyle"
                android:onClick="getOptionsActivity"
                android:text="@string/opt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dot"
                style="@style/ButtonStyle"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button0"
                style="@style/ButtonStyle"
                android:text="@string/_0" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/result"
                style="@style/ButtonStyle"
                android:text="@string/result" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>